# telnyx-web-client

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: build.yml  hakari-diff.yml
crates/application/: Cargo.toml
crates/application/src/: commands.rs  lib.rs  responses.rs
crates/application/src/usecases/: create_conversation_usecase.rs  create_message_usecase.rs  create_phone_number_usecase.rs  create_user_usecase.rs  delete_conversation_usecase.rs  delete_phone_number_usecase.rs  get_conversation_usecase.rs  get_dashboard_home_usecase.rs  get_phone_number_usecase.rs  list_conversations_usecase.rs  list_messages_by_conversation_usecase.rs  list_phone_numbers_usecase.rs  login_usecase.rs  mod.rs  process_telnyx_messaging_webhook_usecase.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/models/: conversation.rs  message.rs  mod.rs  phone_number.rs  processed_webhook_event.rs  reset_password.rs  user.rs
crates/domain/src/repositories/: conversation_repository.rs  message_repository.rs  mod.rs  phone_number_repository.rs  processed_webhook_event_repository.rs  user_repository.rs
crates/domain/src/traits/: mod.rs  outbound_message_service.rs  password_hasher.rs  token_service.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/config/: database.rs  mod.rs  web.rs
crates/infrastructure/src/database/: migrator.rs  mod.rs  pool.rs
crates/infrastructure/src/database/models/: conversation.rs  message.rs  mod.rs  phone_number.rs  processed_webhook_event.rs  reset_password.rs  user.rs
crates/infrastructure/src/migrations/: V1__initial.sql  V2__add_reset_password.sql  V3__add_conversations_and_message_types.sql  V4__add_message_status.sql  V5__add_conversation_recipient_and_message_provider_id.sql  V6__add_message_provider_metadata_and_webhook_events.sql  V7__alter_processed_webhook_payload_to_jsonb.sql
crates/infrastructure/src/repositories/: conversation_repository_impl.rs  message_repository_impl.rs  mod.rs  phone_number_repository_impl.rs  processed_webhook_event_repository_impl.rs  user_repository_impl.rs
crates/infrastructure/src/security/: argon2_hasher.rs  mod.rs  paseto_tokenizer.rs
crates/telnyx/: Cargo.toml
crates/telnyx/src/: lib.rs
crates/web/: Cargo.toml
crates/web/src/: dto.rs  flash.rs  inertia.rs  lib.rs  realtime.rs  server.rs  session.rs  types.rs  webhook_forwarding.rs
crates/web/src/dto/: auth.rs  conversation.rs  dashboard.rs  flash.rs  mod.rs  phone_number.rs
crates/web/src/handlers/: auth.rs  inertia.rs  mod.rs
crates/web/src/handlers/auth/: forgot_password_handler.rs  login_handler.rs  logout_handler.rs  mod.rs  reset_password_handler.rs  signup_handler.rs
crates/web/src/handlers/conversations/: create_conversation_handler.rs  create_message_handler.rs  delete_conversation_handler.rs  get_conversation_handler.rs  list_conversation_messages_handler.rs  list_conversations_handler.rs  mod.rs
crates/web/src/handlers/events/: message_events_handler.rs  mod.rs
crates/web/src/handlers/phone_numbers/: create_phone_number_handler.rs  delete_phone_number_handler.rs  get_phone_number_handler.rs  list_phone_numbers_handler.rs  mod.rs
crates/web/src/handlers/webhooks/: mod.rs  telnyx_messaging_webhook_handler.rs
crates/web/src/middlewares/: auth.rs
crates/workspace-hack/: Cargo.toml
scripts/dockerfiles/: web.Dockerfile
src/: config.rs  main.rs  server.rs  types.rs
web/: AGENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  index.css  layout.tsx  main.tsx
web/src/Pages/: App.tsx  Conversations.tsx  ForgotPassword.tsx  Login.tsx  NotFound.tsx  ResetPassword.tsx  Signup.tsx
web/src/components/: auth-shell.tsx  brand-mark.tsx  password-field.tsx  workspace-shell.tsx
web/src/components/ui/: phone-input.tsx  sidebar.tsx  sonner.tsx
web/src/features/conversations/: ConversationsFeature.tsx  types.ts
web/src/features/conversations/components/: ConversationMainPanel.tsx  ConversationsSidebar.tsx  CreateConversationDialog.tsx  MessageComposer.tsx  MessageList.tsx  SentMediaPanel.tsx
web/src/features/conversations/hooks/: use-conversations-controller.ts
web/src/features/conversations/utils/: conversation-route.ts  message-utils.ts
web/src/features/dashboard/: DashboardFeature.tsx  types.ts
web/src/features/dashboard/components/: AddPhoneNumberDialog.tsx  AnalyticsOverview.tsx  DashboardSidebar.tsx  PhoneNumbersCard.tsx
web/src/features/dashboard/hooks/: use-dashboard-controller.ts
web/src/hooks/: use-flash.ts
web/src/lib/: mock-messaging.ts  types.ts
