[package]
name = "telny-web-client"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
color-eyre = "0.6.5"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-error = "0.2.1"
actix = "0.13.5"
actix-cors = "0.7.1"
actix-governor = "0.10.0"
actix-web = { version = "4", features = ["rustls", "secure-cookies"] }
actix-embed = "0.1.0"
actix-multipart = "0.7.2"
actix-inertia = "0.1.0"
actix-files = "0.6.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["macros"] }

[[bin]]
name = "server"
path = "src/main.rs"