[workspace]
members = [
    "crates/web",
    "crates/infrastructure",
    "crates/workspace-hack",
    "bin/web",
    "crates/domain",
    "crates/application",
]
resolver = "3"

[workspace.dependencies]
dotenvy = "0.15.7"
eyre = "0.6.12"
color-eyre = "0.6.5"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
tracing-error = "0.2.1"
actix = "0.13.5"
actix-cors = "0.7.1"
actix-governor = "0.10.0"
actix-web = { version = "4", features = ["rustls", "secure-cookies"] }
actix-embed = "0.1.0"
actix-multipart = "0.7.2"
actix-inertia = "0.1.0"
actix-files = "0.6.9"
actix-session = { version = "0.10", features = ["cookie-session"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", default-features = false, features = ["macros"] }
bon = "3.8.2"
argon2 = "0.5.3"
rbs = "4.6.2"
rbatis = "4.6.13"
rbdc-pg = "4.6.3"
refinery = { version = "0.9.0", features = ["tokio-postgres"] }
bb8 = "0.9.1"
bb8-postgres = "0.9.0"
async-trait = "0.1.89"
time = "0.3.44"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
garde = { version = "0.22.1", features = ["full"] }
pasetors = { version = "0.7.4", features = ["v4"] }
futures-util = "0.3.31"