[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
domain = { path = "../../crates/domain" }
infrastructure = { path = "../../crates/infrastructure" }

bon.workspace = true
thiserror.workspace = true
garde.workspace = true
time.workspace = true
uuid.workspace = true
