[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
domain = { path = "../../crates/domain" }

thiserror.workspace = true
bon.workspace = true
rbs.workspace = true
rbatis.workspace = true
rbdc-pg.workspace = true
refinery.workspace = true
bb8.workspace = true
bb8-postgres.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
async-trait.workspace = true
argon2.workspace = true
uuid.workspace = true
pasetors.workspace = true