[package]
name = "telnyx"
version = "0.1.0"
edition = "2024"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
domain = { path = "../domain" }

async-trait.workspace = true
bon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
time.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
